# cassandra-orm

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  udt.py
corm/: __init__.py  annotations.py  auth.py  constants.py  datatypes.py  encoders.py  models.py  utils.py
corm-tests/: test_api.py  test_corm_api.py  test_etl.py  test_udt.py
corm/etl/: constants.py  datatypes.py  factory.py  helpers.py  utils.py
corm/etl/factory_testing/: models.py  utils.py
docs/: conf.py  index.rst
